# developer-dashboard

./: .env.example  .gitignore  README.md  docker-compose.yml
.github/workflows/: .gitkeep  backend.yml  frontend.yml  pr-checks.yml
backend/: .dockerignore  .flake8  Dockerfile  alembic.ini  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: .gitkeep  f236f1be0d49_initial_user_and_cache_tables.py
backend/app/: __init__.py  config.py  database.py  dependencies.py  main.py
backend/app/models/: __init__.py  cache.py  user.py
backend/app/routers/: __init__.py  analytics.py  auth.py  users.py
backend/app/schemas/: __init__.py  analytics.py  user.py
backend/app/services/: __init__.py  analytics.py  cache.py  github.py  security.py
backend/tests/: __init__.py  conftest.py  test_analytics.py  test_auth.py  test_cache.py  test_users.py
frontend/: .dockerignore  .eslintrc.cjs  Dockerfile  nginx.conf  nginx.conf.template  package-lock.json  package.json  postcss.config.js  tailwind.config.js  tsconfig.json  vite.config.ts  vitest.config.ts
frontend/src/: App.tsx  index.css  main.tsx  vite-env.d.ts
frontend/src/components/charts/: .gitkeep  ContributionChart.tsx  HeatmapChart.tsx  LanguageChart.tsx  index.ts
frontend/src/components/common/: .gitkeep  Card.tsx  ErrorMessage.tsx  Loader.tsx  ProtectedRoute.tsx  index.ts
frontend/src/components/dashboard/: .gitkeep  ProfileHeader.tsx  RepoCard.tsx  StatsCard.tsx  index.ts
frontend/src/components/layout/: .gitkeep  DashboardLayout.tsx  Navigation.tsx  index.ts
frontend/src/contexts/: .gitkeep  AuthContext.tsx
frontend/src/hooks/: .gitkeep  useAnalytics.ts  useDarkMode.ts
frontend/src/pages/: .gitkeep  CallbackPage.tsx  DashboardPage.tsx  LoginPage.tsx  NotFoundPage.tsx  index.ts
frontend/src/services/: .gitkeep  analyticsService.ts  api.ts  authService.ts
frontend/src/types/: index.ts
frontend/src/utils/: .gitkeep
frontend/tests/: setup.ts  utils.tsx
frontend/tests/components/: Loader.test.tsx  RepoCard.test.tsx  StatsCard.test.tsx
frontend/tests/hooks/: useDarkMode.test.tsx
