# =============================================================================
# Python Project Configuration
# =============================================================================
# This file configures various Python development tools.

[project]
name = "developer-dashboard-backend"
version = "0.1.0"
description = "Backend API for Developer Dashboard"
requires-python = ">=3.11"

# =============================================================================
# Black - Code Formatter
# =============================================================================
[tool.black]
line-length = 88
target-version = ['py311']
include = '\.pyi?$'
exclude = '''
/(
    \.git
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | venv
    | _build
    | buck-out
    | build
    | dist
    | alembic/versions
)/
'''

# =============================================================================
# isort - Import Sorter
# =============================================================================
[tool.isort]
profile = "black"
line_length = 88
skip = [".git", "venv", ".venv", "alembic/versions"]
known_first_party = ["app"]
sections = ["FUTURE", "STDLIB", "THIRDPARTY", "FIRSTPARTY", "LOCALFOLDER"]

# =============================================================================
# mypy - Static Type Checker
# =============================================================================
[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
follow_imports = "silent"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false

# =============================================================================
# pytest - Testing Framework
# =============================================================================
[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-v --tb=short"

# =============================================================================
# coverage - Test Coverage
# =============================================================================
[tool.coverage.run]
source = ["app"]
omit = ["*/tests/*", "*/__init__.py"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
]
